--- a/angular.json
+++ b/angular.json
@@ -25,12 +25,9 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "flickity/dist/flickity.min.css"
+              "src/styles.css"
             ],
-            "scripts": [
-              "flickity/dist/flickity.pkgd.min.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
