--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/flickity/dist/flickity.min.css"
+              "src/styles.css"
             ],
             "scripts": []
           },
