--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@angular/platform-browser": "^16.2.1",
     "@angular/platform-browser-dynamic": "^16.2.1",
     "@angular/router": "^16.2.1",
-    "flickity": "^3.0.0",
     "jwt-decode": "^3.1.2",
     "rxjs": "~7.8.0",
+    "swiper": "^10.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.1"
   },
