--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.1",
+    "@angular/cdk": "^16.2.12",
     "@angular/common": "^16.2.1",
     "@angular/compiler": "^16.2.1",
     "@angular/core": "^16.2.1",
     "@angular/forms": "^16.2.1",
+    "@angular/material": "^16.2.12",
     "@angular/platform-browser": "^16.2.1",
     "@angular/platform-browser-dynamic": "^16.2.1",
     "@angular/router": "^16.2.1",
