GSWI-37: Refactoring all the legacy content from env PRD and STG

--- a/env/stg/Jenkinsfile
+++ b/env/stg/Jenkinsfile
@@ -19,7 +19,10 @@ pipeline {
         stage('Prepare SSH') {
             steps {
                 script {
-                        example.prepareSSH('STG', '${HOST}')
+                    example.prepareSSH('STG', '${HOST}')
+                    sshagent(credentials: ['jenkins2']) {
+                        sh 'ssh  $SSH_USER_PASS@$HOST "cd ${DOCKER_COMPOSE_DIR}/AlFilo && git pull "'
+                    }
                 }
             }
         }
