--- a/env/prd/Jenkinsfile
+++ b/env/prd/Jenkinsfile
@@ -1,58 +1,51 @@
-@Library('standard-library@main') _
 
+// THIS IS LEGACY CONTENT IT HAS SUPPORT WITH LIBRARIES BUT NOT RECOMMENDED
 pipeline {
     agent {
         label 'agent:1.0'
     }
     environment {
-        SSH_USER_PASS_PRD = "jenkins-prd"
-        HOST_PRD = credentials('host-alfilo-web')
-        DOCKER_COMPOSE_DIR = '/home/GuildManager/Infrastructure/docker-compose/front/' // Chose for what you need
-        environment = 'PRD'
+        SSH_USER_PASS = "jenkins-prd"
+        HOST = credentials('host-alfilo-web')
+        DOCKER_COMPOSE_DIR = '/home/alfilo/Infrastructure/docker-compose/front/' // Chose for what you need
     }
     parameters {
-        booleanParam(name: 'Port_checking', defaultValue: true, description: 'Set to true to execute the script on the remote server')
         choice(name: 'ExecutionMode', choices: ['Verbose', 'Quiet'], description: 'Select the execution mode')
-        string(name: 'env', defaultValue: 'PRD', description: 'Select the deployment environment')
     }
     stages {
         stage('Prepare SSH') {
             steps {
                 script {
-                        example.prepareSSH('PRD', '${HOST}')
+                    sh "mkdir ~/.ssh"
+                    sh "echo 'Host *' >> ~/.ssh/config"
+                    sh "echo 'LogLevel ERROR' >> ~/.ssh/config"
+                    sh "ssh-keyscan alfilo.org >> ~/.ssh/known_hosts"
                 }
             }
         }
-        stage('Test Build') {
+
+        stage('Stopping Container') {
             steps {
                 script {
-                        dockerlib.buildDockerImage("front", '${DOCKER_COMPOSE_DIR}')
+                    sshagent(credentials: ['jenkins-alfilo-web']) {
+                        sh 'ssh $SSH_USER_PASS@alfilo.org "cd $DOCKER_COMPOSE_DIR && docker-compose down "'
+                    }
                 }
             }
         }
-        stage('Construct container') {
+
+        stage('Build Container') {
             steps {
                 script {
-                    dockerlib.dockerDown()
-                    dockerlib.buildContainer()
+                    sshagent(credentials: ['jenkins-alfilo-web']) {
+                        sh 'ssh  $SSH_USER_PASS@alfilo.org "cd $DOCKER_COMPOSE_DIR && docker build -t my-build-stage -f docker-helper --no-cache ."'
+                        if (params.ExecutionMode == 'Verbose') {
+                            sh 'ssh  $SSH_USER_PASS@alfilo.org "cd $DOCKER_COMPOSE_DIR && docker-compose build && docker-compose up -d"'
+                        } else if (params.ExecutionMode == 'Quiet'){
+                            sh 'ssh  $SSH_USER_PASS@alfilo.org "cd $DOCKER_COMPOSE_DIR && docker-compose build --quiet && docker-compose up -d"'
+                        }
+                    }
                 }
-            }
-        }
-    }
-    post {
-        always {
-            script{
-                pga.cleanupWorkspace()
-            }
-        }
-        unstable {
-            script{
-                pga.slack_webhook("web")
-            }
-        }
-        failure{
-            script{
-                pga.slack_webhook("web")
             }
         }
     }
